Update controllers
